Update Amper version to 0.5.0-dev-1866